--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "com.zumstudios.zumpass",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"displayName": "ZUMPass-Unity",
 	"description": "Biblioteca de integração do ZUMPass para aplicativo desenvolvidos na Unity Engine.",
 	"unity": "2020.3",
@@ -16,7 +16,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "",
+		"url": "https://github.com/ZUMStudios/com.zumstudios.zumpass.unity.git",
 		"revision": ""
 	}
 }
