Tela provisória de acesso ao ZUMPass

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
 	"name": "com.zumstudios.zumpass",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"displayName": "ZUMPass-Unity",
 	"description": "Biblioteca de integração do ZUMPass para aplicativo desenvolvidos na Unity Engine.",
 	"unity": "2020.3",
 	"documentationUrl": "https://wiki.zeroum.com.br",
   	"changelogUrl": "https://wiki.zeroum.com.br",
 	"dependencies": {
-	    "com.unity.nuget.newtonsoft-json": "3.0.2"
+		"com.unity.textmeshpro": "3.0.6",
+	    "com.unity.nuget.newtonsoft-json": "3.0.2",
+	    "com.dentedpixel.leantween": "2.51.0"
 	},
 	"author": {
 		"name": "Marcos Hsie",
